--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Shadows+Into+Light+Two&display=swap" rel="stylesheet">
   <style>
     .log {
+      margin-top: 10px;
       animation-name: example;
       animation-duration: 4s;
       animation-iteration-count: infinite;
       font-size: 15px;
+      text-align: center;
     }
      @keyframes example {
       0%   {font-size: 15px;}
